refactor(ViewController): 정보 수정 후 메인 페이지로 리디렉션되도록 수정

--- a/src/main/resources/templates/product_edit_form.html
+++ b/src/main/resources/templates/product_edit_form.html
@@ -5,7 +5,7 @@
   <title>상품 수정</title>
 </head>
 <body>
-<form th:action="@{/api/products/{id}(id=${product.id})}" th:object="${product}" method="post">
+<form th:action="@{/products/edit/{id}(id=${product.id})}" th:object="${product}" method="post">
   <input type="hidden" id="put" name="_method" value="put" />
   <div>
     <label>ID: </label>
