--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Product List</h1>
-<a th:href="@{/admin/product/add}">Add New Product</a>
+<a th:href="@{/admin/product/add}">Add or Edit Product</a>
 <table>
   <thead>
   <tr>
@@ -23,7 +23,6 @@
     <td th:text="${product.value.price}"></td>
     <td th:text="${product.value.imageUrl}"></td>
     <td>
-      <a th:href="@{/admin/product/edit/{id}(id=${product.value.id})}">Edit</a>
       <a href="javascript:void(0);"
          th:onclick="'deleteProduct(' + ${product.value.id} + ')'">Delete</a>
     </td>
