--- a/src/main/resources/templates/product_list.html
+++ b/src/main/resources/templates/product_list.html
@@ -24,7 +24,10 @@
         <td class="productImageURL" th:text="${product.imageUrl}">imageURL example</td>
         <td>
             <a th:href="@{/products/edit/{id}(id=${product.id})}"><button type="button">Edit</button></a>
-            <button type="button" th:onclick="'deleteProduct(' + ${product.id} + ')'">Delete</button>
+            <form th:action="@{/products/delete/{id}(id=${product.id})}" method="post" style="display:inline;">
+                <input type="hidden" id="delete" name="_method" value="delete" />
+                <button type="submit">Delete</button>
+            </form>
         </td>
     </tr>
     <tr>
@@ -50,28 +53,5 @@
     </tr>
     </tbody>
 </table>
-
-<script>
-    function deleteProduct(id) {
-        if(confirm('이 상품을 삭제하시겠습니까?')) {
-            let form = document.createElement("form");
-            form.method = 'POST';
-            form.action = '/api/products/' + id
-
-            let methodInput = document.createElement("input");
-            methodInput.type = 'hidden';
-            methodInput.id = 'delete'
-            methodInput.name = '_method';
-            methodInput.value = 'delete';
-            form.appendChild(methodInput);
-
-            document.body.appendChild(form);
-            form.submit();
-            setTimeout(function() {
-                window.location.href = '/products';
-            }, 1000);
-        }
-    }
-</script>
 </body>
 </html>
