--- a/src/main/resources/templates/product_list.html
+++ b/src/main/resources/templates/product_list.html
@@ -16,7 +16,7 @@
         <th>Actions</th>
     </tr>
     </thead>
-    <tbody>
+    <tbody th:remove="all-but-first">
     <tr th:each="product : ${products}">
         <td class="productId" th:text="${product.id}">1</td>
         <td class="productName" th:text="${product.name}">테스트 상품 이름</td>
