--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -13,6 +13,7 @@
       <th>ID</th>
       <th>Name</th>
       <th>Price</th>
+      <th>ImageUrl</th>
       <th>Actions</th>
     </tr>
     <tr th:each="product : ${products}">
