--- a/src/main/resources/static/css/admin/index.css
+++ b/src/main/resources/static/css/admin/index.css
@@ -37,13 +37,14 @@ img {
 .modal {
   display: none;
   position: absolute;
-  top:0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
 }
+
 .modal .modal_popup {
   position: absolute;
   top: 50%;
