--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -39,6 +39,7 @@
         <form th:action="@{/products/delete/{id}(id=${product.id})}" method="post" style="display:inline;">
           <button type="submit" class="btn btn-danger">삭제</button>
         </form>
+        <a th:href="@{/products/view/{id}(id=${product.id})}" class="btn btn-info">조회</a>
       </td>
     </tr>
     </tbody>
