--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -6,29 +6,34 @@
 </head>
 <body>
 <h1>상품 목록</h1>
-<table border="2">
+<table border="1">
   <thead>
   <tr>
+    <th>ID</th>
     <th>Name</th>
     <th>Price</th>
-    <th>Image</th>
+    <th>Image URL</th>
     <th>Actions</th>
   </tr>
   </thead>
   <tbody>
   <tr th:each="product : ${products}">
-    <td th:text="${product.name}"></td>
-    <td th:text="${product.price}"></td>
-    <td th:text="${product.imageUrl}"></td>
+    <td th:text="${product.id}">ID</td>
+    <td th:text="${product.name}">Name</td>
+    <td th:text="${product.price}">Price</td>
+    <td th:text="${product.imageUrl}">Image URL</td>
     <td>
-      <a th:href="@{/admin/products/update/{id}(id=${product.id})}">Edit</a> |
-      <a th:href="@{/admin/products/delete/{id}(id=${product.id})}">Delete</a>
+      <!-- 수정 링크 -->
+      <a th:href="@{/admin/products/update/{id}(id=${product.id})}">Edit</a>
+      <!-- 삭제 폼 -->
+      <form th:action="@{/admin/products/delete/{id}(id=${product.id})}" method="post">
+        <input type="submit" value="Delete">
+      </form>
     </td>
   </tr>
   </tbody>
 </table>
-<button class="btn btn-warning"
-        th:onclick="'location.href=\'/admin/products/add/' + [[${product.id}]] + '\';'">상품 추가</button>
+<br>
+<button class="btn btn-warning" th:onclick="|location.href='/admin/products/add';|">상품 추가</button>
 </body>
 </html>
-
