--- a/src/main/resources/templates/create_form.html
+++ b/src/main/resources/templates/create_form.html
@@ -8,7 +8,7 @@
   <div class="container">
     <form action="/products/new" method="post">
       <div class="form-group">
-        <h1><a href="/">상품 관리 시스템</a> </h1>
+        <h1><a href="/products">돌아 가기</a> </h1>
         <p><label for="name">이름</label>
           <input type="text" id="name" name="name" placeholder="상품 이름을 입력하세요">
         </p>
