Feat: 상품 수정 화면 생성

--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -21,6 +21,10 @@
                 <td th:text="${product.name}"></td>
                 <td th:text="${product.price}"></td>
                 <td th:text="${product.imgUrl}"></td>
+                <td>
+                    <a th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>
+                    <a th:href="@{/products/delete/{id}(id=${product.id})}">Delete</a>
+                </td>
             </tr>
         </tbody>
     </table>
