--- a/src/main/resources/templates/update_form.html
+++ b/src/main/resources/templates/update_form.html
@@ -20,6 +20,7 @@
           </p>
         </div>
         <button type="submit">수정</button>
+        <button type="reset">취소</button>
       </form>
     </div> <!-- /container -->
   </body>
