add product add function

--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -17,7 +17,7 @@
     <label for="imageUrl">Image URL:</label><br>
     <input type="text" id="imageUrl" th:field="*{imageUrl}"><br>
 
-    <button type="submit">Add</button>
+    <button type="submit">Save</button>
 </form>
 
 <a href="/admin/products">Cancel</a>
