fix: modify administrator view table

--- a/src/main/resources/templates/administrator.html
+++ b/src/main/resources/templates/administrator.html
@@ -5,17 +5,23 @@
       layout:decorate="~{/layout/baseLayout}">
 
   <th:block layout:fragment="content">
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Image</th>
-    </tr>
-    <tr th:each="product:${products}">
-      <td th:text="${product.id}"></td>
-      <td th:text="${product.name}"></td>
-      <td th:text="${product.price}"></td>
-      <td th:text="${product.imageUrl}"></td>
-    </tr>
+    <table>
+      <tr>
+        <th></th>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Image</th>
+        <th>Actions</th>
+      </tr>
+      <th:block th:each="product:${products}">
+        <td><input type="checkbox" name="product" /></td>
+        <td th:text="${product.id}"></td>
+        <td th:text="${product.name}"></td>
+        <td th:text="${product.price}"></td>
+        <td th:text="${product.imageUrl}"></td>
+        <td><button>Update</button><button>Delete</button></td>
+      </th:block>
+    </table>
   </th:block>
 </html>
