--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 <div th:fragment="productTable">
     <table id="productTable">
         <thead>
@@ -6,7 +5,7 @@
             <th>ID</th>
             <th>Name</th>
             <th>Price</th>
-            <th>Image URL</th>
+            <th>Category</th>
             <th>Actions</th>
         </tr>
         </thead>
@@ -15,7 +14,7 @@
             <td th:text="${product.id}">1</td>
             <td th:text="${product.name}">Product Name</td>
             <td th:text="${product.price}">100</td>
-            <td th:text="${product.imageUrl}">http://example.com/image.jpg</td>
+            <td th:text="${product.category}">Uncategorized</td>
             <td>
                 <a th:href="@{/products/{id}(id=${product.id})}">View</a>
                 <a th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>
