fix : view.html 수정

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -2,17 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>View Product</title>
+    <title>상품 상세 정보</title>
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/styles.css}">
 </head>
 <body>
-<h1>상품 사항</h1>
+<h1>상품 상세 정보</h1>
 <p><strong>ID:</strong> <span th:text="${product.id}">1</span></p>
 <p><strong>Name:</strong> <span th:text="${product.name}">Product Name</span></p>
 <p><strong>Price:</strong> <span th:text="${product.price}">100</span></p>
-<p><strong>Image URL:</strong> <span th:text="${product.imageUrl}">http://example.com/image.jpg</span></p>
+<p><strong>Category:</strong> <span th:text="${product.category}">Uncategorized</span></p>
 <img th:src="${product.imageUrl}" alt="Product Image" />
 <br><br>
-<a th:href="@{/products}">Back to List</a>
+<a th:href="@{/products}">목록으로 돌아가기</a>
 </body>
 </html>
