--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Edit Product</title>
+    <title>상품 수정</title>
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 </head>
 <body>
@@ -10,22 +10,22 @@
 <form th:action="@{/products/edit/{id}(id=${product.id})}" method="post">
     <input type="hidden" id="id" name="id" th:value="${product.id}" />
     <p>
-        <label for="name">Name:</label>
+        <label for="name">상품명:</label>
         <input type="text" id="name" name="name" th:value="${product.name}" required />
     </p>
     <p>
-        <label for="price">Price:</label>
+        <label for="price">가격:</label>
         <input type="number" id="price" name="price" th:value="${product.price}" required />
     </p>
     <p>
-        <label for="imageUrl">Image URL:</label>
-        <input type="text" id="imageUrl" name="imageUrl" th:value="${product.imageUrl}" required />
+        <label for="category">카테고리:</label>
+        <input type="text" id="category" name="category" th:value="${product.category}" required />
     </p>
     <p>
-        <button type="submit">Update Product</button>
+        <button type="submit">상품 수정</button>
     </p>
 </form>
 <br>
-<a th:href="@{/products}">Back to List</a>
+<a th:href="@{/products}">목록으로 돌아가기</a>
 </body>
-</h
+</html>
