--- a/src/main/resources/templates/edit-product.html
+++ b/src/main/resources/templates/edit-product.html
@@ -6,6 +6,7 @@
 <body>
 <h1>Edit Product</h1>
 <form th:action="@{/api/products/edit/{id}(id=${id})}" th:object="${product}" method="post">
+    <input type="hidden" name="_method" value="put"/>
     <div>
         <label>Name:</label>
         <input type="text" th:field="*{name}"/>
