--- a/src/main/resources/templates/add-form.html
+++ b/src/main/resources/templates/add-form.html
@@ -3,16 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title>admin</title>
-  <!--  <link rel="stylesheet" th:href="@{/style.css}">-->
+  <title>Product Add</title>
+  <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
-<h1>Product Add</h1>
-<form th:action="@{/admin/products/add}" th:product="${product}" method="post">
-  <p>Name: <input type="text" th:field="*{product.name}"></p>
-  <p>Price: <input type="number" th:field="*{product.price}"></p>
-  <p>Image URL: <input type="text" th:field="*{product.imageUrl}"></p>
-  <p><button type="submit">저장</button></p>
-</form>
+<div class="container">
+  <div class="header">
+    <div class="header-txt">
+      <div class="header-txt">
+        <a th:href="@{/admin/products}">
+          <h1>Add product</h1>
+        </a>
+      </div>
+    </div>
+  </div>
+  <h1>Product Add</h1>
+  <form th:action="@{/admin/products/add}" th:object="${product}" method="post">
+    <p>Name: <input type="text" placeholder="name"></p>
+    <p>Price: <input type="number" placeholder="price"></p>
+    <p>Image URL: <input type="text" placeholder="image URL"></p>
+    <button type="submit" class="btn-submit"><a>SUBMIT</a></button>
+  </form>
+</div>
 </body>
 </html>
