--- a/src/main/resources/templates/edit-form.html
+++ b/src/main/resources/templates/edit-form.html
@@ -4,20 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>Edit Product</title>
-  <!--  <link rel="stylesheet" th:href="@{/style.css}">-->
+  <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
-<h1>Product Edit</h1>
-<form th:action="@{/admin/products/add}" th:product="${product}" method="post">
-<!-- <form th:action="@{/admin/products/edit/{id}(id=${product.id})}" th:product="${product}" method="post">-->
-   <p>Name: <input type="text" th:field="*{product.id}"></p>
-   <p>Name: <input type="text" th:field="*{product.name}"></p>
-   <p>Price: <input type="number" th:field="*{product.price}"></p>
-   <p>Image URL: <input type="text" th:field="*{product.imageUrl}"></p>
-   <p><button type="submit">저장</button></p>
-</form>
+<div class="container">
+  <div class="header">
+    <div class="header-txt">
+      <div class="header-txt">
+        <a th:href="@{/admin/products}">
+          <h1>Edit product</h1>
+        </a>
+      </div>
+    </div>
+  </div>
+  <h1>Product Edit</h1>
+  <form th:action="@{/admin/products/edit/{id}(id=${product.id})}" th:object="${product}" method="post">
+    <p>Name: <input type="text" th:field="*{name}"></p>
+    <p>Price: <input type="number" th:field="*{price}"></p>
+    <p>Image URL: <input type="text" th:field="*{imageUrl}"></p>
+    <button type="submit" class="btn-submit"><a>SUBMIT</a></button>
+  </form>
+</div>
 </body>
 </html>
-
-
-
