--- a/src/main/resources/templates/add-form.html
+++ b/src/main/resources/templates/add-form.html
@@ -19,9 +19,9 @@
   </div>
   <h1>Product Add</h1>
   <form th:action="@{/admin/products/add}" th:object="${product}" method="post">
-    <p>Name: <input type="text" placeholder="name"></p>
-    <p>Price: <input type="number" placeholder="price"></p>
-    <p>Image URL: <input type="text" placeholder="image URL"></p>
+    <p>Name: <input type="text" th:field="*{name}"></p>
+    <p>Price: <input type="number" th:field="*{price}"></p>
+    <p>Image URL: <input type="text" th:field="*{imageUrl}"></p>
     <button type="submit" class="btn-submit"><a>SUBMIT</a></button>
   </form>
 </div>
