--- a/src/main/resources/templates/product_edit.html
+++ b/src/main/resources/templates/product_edit.html
@@ -21,7 +21,7 @@
         <input type="text" id="imageUrl" th:placeholder="${product.imageUrl}"/>
     </div>
     <div>
-        <button type="submit" id="save-btn" th:onclick="'fetch_product(' + ${product.id} + ')'">Save</button>
+        <button type="submit" id="save-btn" th:onclick="'fetch_product(' + ${product.id} + ')'">Edit!</button>
     </div>
 </div>
 <script type="text/javascript">
