--- a/src/main/resources/templates/administrator.html
+++ b/src/main/resources/templates/administrator.html
@@ -15,12 +15,49 @@
         <th>Actions</th>
       </tr>
       <th:block th:each="product:${products}">
-        <td><input type="checkbox" name="product" /></td>
-        <td th:text="${product.id}"></td>
-        <td th:text="${product.name}"></td>
-        <td th:text="${product.price}"></td>
-        <td th:text="${product.imageUrl}"></td>
-        <td><button>Update</button><button>Delete</button></td>
+        <tr>
+          <td><input type="checkbox" name="product" /></td>
+          <td th:text="${product.id}"></td>
+          <td th:text="${product.name}"></td>
+          <td th:text="${product.price}"></td>
+          <td th:text="${product.imageUrl}"></td>
+          <td>
+            <div style="display: flex; justify-content: space-between;">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal">
+                  Update
+                </button>
+                <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Add New Product</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <form th:action="@{/api/products/update/{id}(id=${product.id})}" th:object="${productDto}" method="post">
+                        <div class="modal-body">
+                          <label>Name
+                            <input type="text" th:value="${product.name}" name="name" required="required">
+                          </label>
+                          <label>Price
+                            <input type="text" th:value="${product.price}" name="price" required="required">
+                          </label>
+                          <label>Image Url
+                            <input type="text" th:value="${product.imageUrl}" name="imageUrl">
+                          </label>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="submit" class="btn btn-primary">Add</button>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              <button>Delete</button>
+            </div>
+          </td>
+        </tr>
       </th:block>
     </table>
   </th:block>
