--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -35,12 +35,41 @@
             border-radius: 8px;
         }
     </style>
+    <script defer>
+        function showAddProductForm() {
+            document.getElementById('addProductForm').style.display = 'block';
+        }
+
+        function hideAddProductForm() {
+            document.getElementById('addProductForm').style.display = 'none';
+        }
+
+    </script>
 </head>
 <body>
 <p>
     <H1 id = "tableTitle" th:text="'상품 목록 조회'">상품관리 페이지</H1>
-    <button onclick="">상품 추가</button> <button>상품 삭제</button> <button>상품수정</button>
+    <button  onclick="showAddProductForm()">상품 추가</button> <button>상품 삭제</button> <button>상품수정</button>
 </p>
+<div id="addProductForm" style="display: none;">
+    <h2>상품 추가</h2>
+    <form th:action="@{/product}" method="post" id="productForm">
+        <label for="id">상품 아이디:</label>
+        <input type="number" id="id" name="id" required><br><br>
+
+        <label for="name">상품 이름:</label>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="price">상품 가격:</label>
+        <input type="number" id="price" name="price" required><br><br>
+
+        <label for="imageUrl">상품 이미지 URL:</label>
+        <input type="text" id="imageUrl" name="imageUrl" required><br><br>
+
+        <button type="submit">추가</button>
+        <button type="button" onclick="hideAddProductForm()">취소</button>
+    </form>
+</div>
 <table id="productTable">
     <thead>
     <tr>
