--- a/src/main/resources/templates/Add_product.html
+++ b/src/main/resources/templates/Add_product.html
@@ -8,7 +8,7 @@
 <h1>상품 추가</h1>
 <form th:action="@{/admin/products}" th:object="${product}" method="post">
   <div>
-    <label for="name">Id:</label>
+    <label for="id">Id:</label>
     <input type="number" id="id" th:field="*{id}" required />
   </div>
   <div>
