--- a/src/main/resources/templates/Edit_product.html
+++ b/src/main/resources/templates/Edit_product.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 <h1>상품 수정</h1>
-<form th:action="@{/admin/products/update/{id}(id=${product.id})}" th:object="${product}" method="post">
-<!--  무결성 문제로 인해 id는 수정 불가능하게 설정-->
+<form th:action="@{/admin/products/{id}(id=${product.id})}" th:object="${product}" method="post">
+  <input type="hidden" name="_method" value="PUT" /> <!-- PUT 요청을 처리하기 위한 숨겨진 필드 -->
   <div>
-    <label for="name">Name:</label>
+    <label for="name">이름:</label>
     <input type="text" id="name" th:field="*{name}" required />
   </div>
   <div>
-    <label for="price">Price:</label>
+    <label for="price">가격:</label>
     <input type="number" id="price" th:field="*{price}" required />
   </div>
   <div>
-    <label for="imageUrl">Image URL:</label>
+    <label for="imageUrl">이미지 URL:</label>
     <input type="text" id="imageUrl" th:field="*{imageUrl}" required />
   </div>
   <div>
