--- a/src/main/resources/templates/Products.html
+++ b/src/main/resources/templates/Products.html
@@ -13,11 +13,10 @@
   <thead>
   <tr>
     <th>ID</th>
-    <th>Name</th>
-    <th>Price</th>
-    <th>Url</th>
-    <th>Actions</th>
-
+    <th>이름</th>
+    <th>가격</th>
+    <th>URL</th>
+    <th>조치</th>
   </tr>
   </thead>
   <tbody>
@@ -25,10 +24,13 @@
     <td th:text="${product.id}"></td>
     <td th:text="${product.name}"></td>
     <td th:text="${product.price}"></td>
-    <td th:text="${product.ImageUrl}"></td>
+    <td th:text="${product.imageUrl}"></td>
     <td>
       <a th:href="@{/admin/products/edit/{id}(id=${product.id})}">수정</a> |
-      <a th:href="@{/admin/products/delete/{id}(id=${product.id})}">삭제</a>
+      <form th:action="@{/admin/products/{id}(id=${product.id})}" method="post" style="display:inline;">
+        <input type="hidden" name="_method" value="DELETE" />
+        <button type="submit">삭제</button>
+      </form>
     </td>
   </tr>
   </tbody>
