--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -69,14 +69,43 @@
             document.getElementById('editProductForm').style.display = 'none';
         }
 
+        function deleteProducts() {
+            const checkboxes = document.querySelectorAll('input[name="selectedProductIds"]:checked');
+            if (checkboxes.length === 0) {
+                alert('삭제할 상품을 선택해주세요.');
+                return;
+            }
+
+            const selectedProductIds = Array.from(checkboxes).map(cb => cb.value); // 선택된 상품 ID 배열 생성
+
+            fetch('/product', {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(selectedProductIds),
+            })
+                .then(response => {
+                    if (response.ok) {
+                        location.reload(); // 성공 시 페이지 새로고침
+                    } else {
+                        alert('상품 삭제에 실패했습니다.');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('상품 삭제 중 오류가 발생했습니다.');
+                });
+
+        }
     </script>
 </head>
 <body>
 <p>
-    <H1 id = "tableTitle" th:text="'상품 목록 조회'">상품관리 페이지</H1>
-    <button  onclick="showAddProductForm()">상품 추가</button>
+<H1 id = "tableTitle" th:text="'상품 목록 조회'">상품관리 페이지</H1>
+<button  onclick="showAddProductForm()">상품 추가</button>
 <button onclick="editProduct()">상품 수정</button>
-<button>상품 삭제</button>
+<button onclick="deleteProducts()" type="submit" >상품 삭제</button>
 </p>
 <div id="addProductForm" style="display: none;">
     <h2>상품 추가</h2>
@@ -118,7 +147,7 @@
     </form>
 </div>
 
-    <table id="productTable">
+<table id="productTable">
     <thead>
     <tr>
         <th>선택</th>
@@ -132,10 +161,10 @@
     <td>
         <input type="checkbox" name="selectedProductIds" th:value="${entry.key}">
     </td>
-        <td class="productId" th:text="${entry.key}" >1</td>
-        <td class="productName" th:text="${entry.value.name}">테스트 이름</td>
-        <td class="productPrice" th:text="${entry.value.price}">1000</td>
-        <td class="productImgURL" th:text="${entry.value.url}">"테스트 경로"</td>
+    <td class="productId" th:text="${entry.key}" >1</td>
+    <td class="productName" th:text="${entry.value.name}">테스트 이름</td>
+    <td class="productPrice" th:text="${entry.value.price}">1000</td>
+    <td class="productImgURL" th:text="${entry.value.url}">"테스트 경로"</td>
     </tbody>
 </table>
 </body>
