--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -16,6 +16,22 @@
         <td> <span th:text="|price : ${product.price}|">가격</span></td>
         <td> <span th:text="|imageUrl : ${product.imageUrl}|">이미지</span></td>
         <td>
+          <form th:action="@{/admin/{id}(id=${product.id})}" th:object="${productDTO}" method="#" th:method="put">
+            <div>
+              <label for="fixName">상품 이름</label>
+              <input type="text" id="fixName" th:field="*{name}">
+            </div>
+            <div>
+              <label for="fixPrice">상품 가격</label>
+              <input type="text" id="fixPrice" th:field="*{price}">
+            </div>
+            <div>
+              <label for="fixImg">상품 이미지</label>
+              <input type="text" id="fixImg" th:field="*{imageUrl}">
+            </div>
+            <button type="submit">수정하기</button>
+          </form>
+
           <form th:action="@{/admin/{id}(id=${product.id})}" method="#" th:method="delete">
             <button type="submit">삭제하기</button>
           </form>
