--- a/src/main/resources/templates/version-SSR/index.html
+++ b/src/main/resources/templates/version-SSR/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>상품 관리</title>
-    <link th:href="@{/style.css}" rel="stylesheet" />
+    <link th:href="@{/style.css}" rel="stylesheet"/>
 
     <script>
         function submitForm(id) {
@@ -11,6 +11,7 @@
             document.getElementById('deleteFormInputId').value = id;//
             document.getElementById('deleteForm').submit();
         }
+
         function checkIfAnyCheckboxChecked() {
             var checkboxes = document.getElementsByName('productIds');
             for (var i = 0; i < checkboxes.length; i++) {
@@ -20,16 +21,17 @@
             }
             return false; // 체크된 체크박스가 없음
         }
-        function submitSelectDelete(){
+
+        function submitSelectDelete() {
             if (!checkIfAnyCheckboxChecked()) {
                 // event.preventDefault(); // 체크된 체크박스가 없으면 기본 동작을 막음
                 alert('삭제할 상품을 선택해 주세요.'); // 사용자에게 알림을 줄 수도 있음
-            }else{
+            } else {
                 document.getElementById('all').submit();
             }
         }
 
-        document.getElementById('selectDeleteButton').addEventListener('click', function(event) {
+        document.getElementById('selectDeleteButton').addEventListener('click', function (event) {
             if (!checkIfAnyCheckboxChecked()) {
                 event.preventDefault(); // 체크된 체크박스가 없으면 기본 동작을 막음
                 alert('삭제할 상품을 선택해 주세요.'); // 사용자에게 알림을 줄 수도 있음
@@ -39,9 +41,11 @@
 </head>
 <body>
 <div class="container">
-    <a th:href="@{/add}"><button id="addButton">상품 추가</button></a>
+    <a th:href="@{/add}">
+        <button id="addButton">상품 추가</button>
+    </a>
     <button form="all" id="selectDeleteButton" onclick="submitSelectDelete()" type="button">선택된 상품들 일괄 삭제</button>
-    <form id="all"  th:action="@{/deleteSelected}" method="post">
+    <form id="all" th:action="@{/deleteSelected}" method="post">
 
         <div>
             <table>
@@ -62,13 +66,17 @@
                     </td>
                     <td>
                         <!-- 삭제 폼 -->
-                        <button type="button" id="deleteButton" th:onclick="'submitForm(\'' + ${product.id} + '\')'">삭제</button>
+                        <button type="button" id="deleteButton" th:onclick="'submitForm(\'' + ${product.id} + '\')'">
+                            삭제
+                        </button>
 
-                        <a th:href="@{/edit/{id}(id=${product.id})}"><button type="button" id="editButton">수정</button></a>
-<!--                        <form th:action="@{/edit}" method="get" style="display:inline;">-->
-<!--                            <input type="hidden" th:value="${product.id}" name="productId"/>-->
-<!--                            <button id="editButton" type="submit">수정</button>-->
-<!--                        </form>-->
+                        <a th:href="@{/edit/{id}(id=${product.id})}">
+                            <button type="button" id="editButton">수정</button>
+                        </a>
+                        <!--                        <form th:action="@{/edit}" method="get" style="display:inline;">-->
+                        <!--                            <input type="hidden" th:value="${product.id}" name="productId"/>-->
+                        <!--                            <button id="editButton" type="submit">수정</button>-->
+                        <!--                        </form>-->
                     </td>
                     <td th:text="${product.id}">id</td>
                     <td th:text="${product.name}">name</td>
@@ -86,7 +94,7 @@
 
 <!-- 단일 상품 삭제 폼 -->
 <form id="deleteForm" th:action="@{/delete}" method="post" style="display:none;">
-    <input type="hidden" id="deleteFormInputId" name="productId"\>  <!--name은 모델의 이름 -->
+    <input type="hidden" id="deleteFormInputId" name="productId" \>  <!--name은 모델의 이름 -->
 </form>
 
 </body>
