refactor: AdminController Http Method 변경
삭제하는 작업을 Delete, 업데이트하는 작업은 Put

--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>새 상품 등록</h1>
-<form th:action="@{/admin/product/update/{id}(id=${product.id})}" th:object="${product}" method="post">
-    <input type="hidden" name="_method" value="put" />
+<form th:action="@{/admin/product/{id}(id=${product.id})}" th:object="${product}" method="post">
+    <input type="hidden" name="_method" value="PUT" />
     <div>
         <label for="name_edit">상품명:</label>
         <input type="text" id="name_edit" name="name" th:field="*{name}" required/>
