--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>새 상품 등록</h1>
-<form th:action="@{/admin/product/new}" method="post">
+<form th:action="@{/admin/product}" method="post">
     <div>
         <label for="name">상품명:</label>
         <input type="text" id="name" name="name"/>
