--- a/src/main/resources/templates/create_form.html
+++ b/src/main/resources/templates/create_form.html
@@ -36,7 +36,7 @@
 <div class="container">
     <div class="form-container">
         <h5 class="form-header">상품 등록</h5>
-        <form th:action="@{/admin/create}" method="post">
+        <form th:action="@{/admin/gift/create}" method="post">
             <div class="form-group">
                 <label for="name" class="form-label">상품명</label>
                 <input type="text" name="name" id="name" class="form-control">
