--- a/src/main/resources/templates/gift_detail.html
+++ b/src/main/resources/templates/gift_detail.html
@@ -34,8 +34,8 @@
         <p><strong>이미지 URL:</strong> <span th:text="${gift.imageUrl}" target="_blank"></span></p>
     </div>
     <div class="text-center mt-4">
-        <a th:href="@{|/admin/modify/${gift.id}|}" class="btn btn-warning">상품 수정</a>
-        <form th:action="@{|/admin/delete/${gift.id}|}" method="post" class="d-inline-block">
+        <a th:href="@{|/admin/gift/modify/${gift.id}|}" class="btn btn-warning">상품 수정</a>
+        <form th:action="@{|/admin/gift/delete/${gift.id}|}" method="post" class="d-inline-block">
             <input type="hidden" name="_method" value="delete">
             <input type="submit" value="상품 삭제" class="btn btn-danger">
         </form>
