--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -21,7 +21,7 @@
     </thead>
     <tbody>
     <tr th:each="product: ${productList}">
-      <td><a th:href="@{/admin/product/{id}(id=${product.id})}" th:text="${product.id}">id</a></td>
+      <td><span th:text="${product.id}"></span></td>
       <td><span th:text="${product.name}"></span></td>
       <td><span th:text="${product.price}"></span></td>
       <td><img th:text="${product.imageUrl}" alt="no image"></img></td>
