feat : ID 자동으로 받기 사용자한테 id값을 받는게 아닌 DB의 auto_increment 기능을 사용해서 자동으로 id값을 받게 설정했습니다.

--- a/src/main/resources/templates/edit_product_form.html
+++ b/src/main/resources/templates/edit_product_form.html
@@ -12,10 +12,7 @@
   <div th:if="${error}">
     <p th:text="${error}" style="color:red;"></p>
   </div>
-  <div>
-    <label for="id">ID:</label>
-    <input type="text" id="id" th:field="*{id}"/>
-  </div>
+
   <div>
     <label for="name">상품 이름:</label>
     <input type="text" id="name" th:field="*{name}"/>
@@ -29,7 +26,7 @@
     <input type="text" id="imageUrl" th:field="*{imageUrl}"/>
   </div>
   <div>
-    <button type="submit">Submit</button>
+    <button type="수정">Submit</button>
   </div>
 </form>
 </body>
