--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -132,7 +132,6 @@ a {
   padding-right: 7px;
 }
 
-
 .outer-form {
   margin-top: 50px;
   margin-bottom: 15px;
@@ -187,4 +186,37 @@ a {
   font-size: 16px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+
+body.error-page {
+  font-family: Arial, sans-serif;
+  background-color: #f8f9fa;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+}
+
+.error-container {
+  max-width: 400px;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.error-container h1 {
+  color: #dc3545;
+  margin-bottom: 20px;
+}
+
+.error-icon {
+  font-size: 3rem;
+  color: #dc3545;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
