--- a/src/main/resources/templates/add_product.html
+++ b/src/main/resources/templates/add_product.html
@@ -4,8 +4,8 @@
   <title>Product Form</title>
 </head>
 <body>
-<h1 th:text="${product == null || product.id() == 0} ? 'Create Product' : 'Edit Product'"></h1>
-<form th:action="@{${product == null || product.id() == 0} ? '/admin/products' : '/admin/products/edit/' + ${product.id()}}" th:object="${product}" method="post">
+<h1 th:text="${product == null || product.getId() == 0} ? 'Create Product' : 'Edit Product'"></h1>
+<form th:action="@{${product == null || product.getId() == 0} ? '/admin/products' : '/admin/products/edit/' + ${product.getId()}}" th:object="${product}" method="post">
   <div>
     <label for="id">Id</label>
     <input type="number" id="id" th:field="*{id}" />
