--- a/src/main/resources/templates/add_product.html
+++ b/src/main/resources/templates/add_product.html
@@ -8,7 +8,7 @@
 <form th:action="@{${product == null || product.getId() == 0} ? '/admin/products' : '/admin/products/edit/' + ${product.getId()}}" th:object="${product}" method="post">
   <div>
     <label for="id">Id</label>
-    <input type="number" id="id" th:field="*{id}" />
+    <input type="text" id="id" th:field="*{id}" readonly />
   </div>
   <div>
     <label for="name">Name</label>
