--- a/src/main/resources/templates/product-form.html
+++ b/src/main/resources/templates/product-form.html
@@ -30,6 +30,7 @@
   </form>
 
   <form th:action="@{'/products/edit/' + ${product.id}}" th:object="${product}" method="post" th:unless="${product.id == null}">
+    <input type="hidden" name="_method" value="put"/>
     <div class="form-group">
       <label>Name:</label>
       <input type="text" th:field="*{name}" class="form-control" required />
