--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Product List</h1>
-<a th:href="@{/admin/product/add}">Add or Edit Product</a>
+<a th:href="@{/admin/product/add}">Add New Product</a>
 <table>
   <thead>
   <tr>
@@ -18,13 +18,14 @@
   </thead>
   <tbody>
   <tr th:each="product : ${products}">
-    <td th:text="${product.value.id}"></td>
-    <td th:text="${product.value.name}"></td>
-    <td th:text="${product.value.price}"></td>
-    <td th:text="${product.value.imageUrl}"></td>
+    <td th:text="${product.id}"></td>
+    <td th:text="${product.name}"></td>
+    <td th:text="${product.price}"></td>
+    <td th:text="${product.imageUrl}"></td>
     <td>
+      <a th:href="@{'/admin/product/edit/' + ${product.id}}">Edit</a>
       <a href="javascript:void(0);"
-         th:onclick="'deleteProduct(' + ${product.value.id} + ')'">Delete</a>
+         th:onclick="'deleteProduct(' + ${product.id} + ')'">Delete</a>
     </td>
   </tr>
   </tbody>
@@ -47,7 +48,6 @@
       });
     }
   }
-
 
 </script>
 </body>
