Refactor: 멘토님 조언에 따른 코드 수정
1. null로 처리했던 예외사항을 exception을 생성하여
   처리함(ProductAlreadyExistsException과 ProductNotFoundException 생성)
2. controller에서 ExceptionalHandler를 사용하여 에러를 잡아서 적절한
   응답함
3. 자바스크립트의 getElementById를 querySelector로 수정함
4. h1을 전역변수로 뒀던 것을 id를 만들어서 지정해주어 수정함

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" th:href="@{/css/styles.css}"/>
     </head>
     <body>
-        <h1>상품 매니저</h1>
+        <h1 id="product_manager">상품 매니저</h1>
 
         <h2>상품 생성</h2>
         <form id="createProductForm">
