--- a/src/main/resources/templates/addForm.html
+++ b/src/main/resources/templates/addForm.html
@@ -10,7 +10,7 @@
                 <h2>상품 등록</h2>
             </div>
             <h4 class="mb-3">상품 정보 입력</h4>
-            <form th:action="@{/api/products/add}" method="post">
+            <form th:action="@{/products/add}" th:object="${requestDto}" method="post">
                 <div>
                     <label for="name">상품명</label>
                     <input type="text" id="name" name="name" class="form-control" placeholder="이름을 입력하세요">
