--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<head>
-    <title>Product List</title>
-</head>
-<body>
+    <head>
+        <title>Product List</title>
+    </head>
+    <body>
     <h1>Product List</h1>
-    <a href="/add">상품 등록</a>
-    <table>
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Image URL</th>
-        </tr>
-        </thead>
-        <tbody>
-            <tr th:each="product : ${products}">
-                <td th:text="${product.id}"></td>
-                <td th:text="${product.name}"></td>
-                <td th:text="${product.price}"></td>
-                <td th:text="${product.imgUrl}"></td>
-                <td>
-                    <a th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>
-                    <a th:href="@{/products/delete/{id}(id=${product.id})}">Delete</a>
-                </td>
+    <a href="/products/add">상품 등록</a>
+        <table>
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Image URL</th>
             </tr>
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                <tr th:each="product : ${products}">
+                    <td th:text="${product.id}"></td>
+                    <td th:text="${product.name}"></td>
+                    <td th:text="${product.price}"></td>
+                    <td th:text="${product.imgUrl}"></td>
+                    <td>
+                        <form th:action="@{/products/edit/{id}(id=${product.id})}" th:method="get">
+                            <button type="submit">Edit</button>
+                        </form>
+                    </td>
+                    <td>
+                        <form th:action="@{/products/delete/{id}(id=${product.id})}" th:method="post">
+                            <input type="hidden" name="_method" value="delete">
+                            <button type="submit">Delete</button>
+                        </form>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
