fix : 코드 리뷰 수정 반영

--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -18,8 +18,8 @@
         <input type="number" id="price" name="price" th:value="${product.price}" required />
     </p>
     <p>
-        <label for="category">카테고리:</label>
-        <input type="text" id="category" name="category" th:value="${product.category}" required />
+        <label for="imgUrl">이미지:</label>
+        <input type="text" id="imgUrl" name="imgUrl" th:value="${product.imgUrl}" required />
     </p>
     <p>
         <button type="submit">상품 수정</button>
