--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>상품 추가</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/static/css/styles.css}">
+    <title>Product List</title>
 </head>
 <body>
-<h2>새로운 상품 추가</h2>
-<div th:fragment="addProductForm">
-    <form id="addProductForm" th:action="@{/products}" method="post">
-        <label for="name">상품명:</label>
-        <input type="text" id="name" name="name" required>
-        <label for="price">가격:</label>
-        <input type="number" id="price" name="price" required>
-        <label for="category">카테고리:</label>
-        <input type="text" id="category" name="category" required>
-        <button type="submit">상품 추가</button>
-    </form>
-</div>
+<h1>상품 목록</h1>
+<table border="1">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Image URL</th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="product : ${products}">
+        <td th:text="${product.id}">ID</td>
+        <td th:text="${product.name}">Name</td>
+        <td th:text="${product.price}">Price</td>
+        <td><img th:src="${product.imageUrl}" alt="Product Image" width="100"></td>
+        <td>
+            <!-- 수정 링크 -->
+            <a th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>
+            <!-- 삭제 폼 -->
+            <form th:action="@{/products/delete/{id}(id=${product.id})}" method="post">
+                <input type="submit" value="Delete">
+            </form>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<br>
+<button class="btn btn-warning" th:onclick="|location.href='/admin/products/add';|">상품 추가</button>
 </body>
 </html>
