--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -10,7 +10,7 @@
 <p><strong>ID:</strong> <span th:text="${product.id}">1</span></p>
 <p><strong>Name:</strong> <span th:text="${product.name}">Product Name</span></p>
 <p><strong>Price:</strong> <span th:text="${product.price}">100</span></p>
-<p><strong>Category:</strong> <span th:text="${product.category}">Uncategorized</span></p>
+<p><strong>Category:</strong> <span th:text="${product.imgUrl}">Uncategorized</span></p>
 <img th:src="${product.imageUrl}" alt="Product Image" />
 <br><br>
 <a th:href="@{/products}">목록으로 돌아가기</a>
