--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -114,3 +114,13 @@ img {
 .btn:hover {
     background-color: #FFD100;
 }
+
+.delete-btn {
+    background: none;
+    border: none;
+    color: inherit;
+}
+
+.delete-btn:hover {
+    cursor: pointer;
+}
